--- a/CyberpunkVehicles/wwwroot/index.html
+++ b/CyberpunkVehicles/wwwroot/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    
+<nav>
+    <section class="hero is-black is-bold">
+        <div class="hero-body">
+            <div class="container">
+                <img src="Images/cp2077logo.png" alt="Cyberpunk2077 logo" id="cyberpunk-logo">
+            </div>
+        </div>
+    </section>
+</nav>
+
 </body>
 </html>
