--- a/CyberpunkVehicles/wwwroot/index.html
+++ b/CyberpunkVehicles/wwwroot/index.html
@@ -6,17 +6,22 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css" />
+    <script src="https://kit.fontawesome.com/bfae10477e.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<nav>
-    <section class="hero is-black is-bold">
-        <div class="hero-body">
-            <div class="container">
-                <img src="Images/cp2077logo.png" alt="Cyberpunk2077 logo" id="cyberpunk-logo">
+    <nav>
+        <section class="hero is-black is-bold">
+            <div class="hero-body">
+                <div class="container">
+                    <img src="Images/cp2077logo.png" alt="Cyberpunk2077 logo" id="cyberpunk-logo">
+                </div>
             </div>
+        </section>
+    </nav>
+    <div class="container">
+        <div class="add-vehicle-cont">
+            <i class="fa-solid fa-circle-plus add-vehicle"></i>
         </div>
-    </section>
-</nav>
-
+    </div>
 </body>
 </html>
