Add cancel and submit buttons
these buttons will be responsible for controlling the form

--- a/CyberpunkVehicles/wwwroot/index.html
+++ b/CyberpunkVehicles/wwwroot/index.html
@@ -22,6 +22,16 @@
         <div class="add-vehicle-cont">
             <i class="fa-solid fa-circle-plus add-vehicle"></i>
         </div>
+        <div class="create-new-vehicle">
+            
+            <div class="columns is-centered">
+                <div class="create-vehicle-btns column is-four-fifths ">
+                    <button class="abort-btn"><i class="fa-solid fa-xmark"></i> Cancel</button>
+                    <button class="submit-btn"><i class="fa-solid fa-check"></i> Submit</button>
+                </div>
+            </div>
+        </div>
+        
     </div>
 </body>
 </html>
