Customize input file

--- a/CyberpunkVehicles/wwwroot/index.html
+++ b/CyberpunkVehicles/wwwroot/index.html
@@ -31,7 +31,7 @@
                             <figure class="media-left ">
                                 <p class="image">
                                     <label for="upload" id="upload-label">
-                                        <img src="#"/>
+                                        <img src="Images/defaultImage.jpg" alt="preview"/>
                                     </label>
                                     <input type="file" name="vehicleImage" id="upload" ACCEPT="image/png, image/jpg">
                                 </p>
