Add the bottom of the the form and a bit of styling

--- a/CyberpunkVehicles/wwwroot/index.html
+++ b/CyberpunkVehicles/wwwroot/index.html
@@ -49,7 +49,42 @@
                                 </div>
                             </div>
                         </div>
-                        
+                        <div class="vehicle-details">
+                            <div class="columns">
+                                <div class="column">
+                                    <div class="info-left">
+                                        <p><label for="drivetrain">Drivetrain:</label></p>
+                                        <p><label for="body">Body:</label></p>
+                                        <p><label for="weight">Weight:</label></p>
+                                    </div>
+                                    <div class="info-right">
+                                        <select name="drivetrainId" id="drivetrain">
+                                            <option value="1">RWD</option>
+                                            <option value="2">FWD</option>
+                                            <option value="3">AWD</option>
+                                        </select>
+                                        <select name="bodyId" id="body">
+                                            <option value="3">Sedan</option>
+                                            <option value="2">Coupe</option>
+                                            <option value="1">Hatchback</option>
+                                        </select>
+                                        <p><input type="number" name="weight" id="weight"></p>
+                                    </div>
+                                </div>
+                                <div class="column">
+                                    <div class="info-left">
+                                        <label for="horsePower">Horse Power</label><br>
+                                        <label for="topSpeed">Top Speed</label><br>
+                                        <label for="year">Year</label>
+                                    </div>
+                                    <div class="info-right">
+                                        <p><input type="text" name="horsePower" id="horsePower"></p>
+                                        <p><input type="number" name="topSpeed" id="topSpeed"></p>
+                                        <p><input type="number" name="year" id="year"></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </form>
                 </div>
             </div>
