Assign hide functions to "add-vehicle" button and for cancel button

--- a/CyberpunkVehicles/wwwroot/index.html
+++ b/CyberpunkVehicles/wwwroot/index.html
@@ -22,10 +22,10 @@
         <div class="add-vehicle-cont">
             <i class="fa-solid fa-circle-plus add-vehicle"></i>
         </div>
-        <div class="create-new-vehicle">
+        <div class="create-new-vehicle is-hidden">
 
             <div class="columns is-centered">
-                <div class="column is-four-fifths create-new-vehicle-content">
+                <div class="column is-four-fifths create-new-vehicle-content ">
                     <form class="create-vehicle-form" method="POST" enctype="multipart/form-data">
                         <div class="media">
                             <figure class="media-left ">
@@ -98,5 +98,6 @@
         </div>
         
     </div>
+    <script src="js/app.js"></script>
 </body>
 </html>
