Add collapsing/expanding functions

--- a/CyberpunkVehicles/wwwroot/index.html
+++ b/CyberpunkVehicles/wwwroot/index.html
@@ -120,7 +120,7 @@
                     <div class="expand-container">
                         <i class="fa-solid fa-angle-down expand-btn"></i>
                     </div>
-                    <div class="vehicle-details">
+                    <div class="vehicle-details is-hidden">
                         <div class="columns">
                             <div class="column">
                                 <div class="info-left">
