--- a/CyberpunkVehicles/wwwroot/index.html
+++ b/CyberpunkVehicles/wwwroot/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css" />
     <script src="https://kit.fontawesome.com/bfae10477e.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
     <nav>
@@ -161,5 +162,7 @@
         </div>  
     </div>
     <script src="js/app.js"></script>
+    <script src="js/fetchData.js"></script>
+    <script src="js/boilerplates.js"></script>
 </body>
 </html>
