--- a/CyberpunkVehicles/wwwroot/index.html
+++ b/CyberpunkVehicles/wwwroot/index.html
@@ -163,6 +163,6 @@
     </div>
     <script src="js/app.js"></script>
     <script src="js/fetchData.js"></script>
-    <script src="js/boilerplates.js"></script>
+    <script src="js/boilerplate.js"></script>
 </body>
 </html>
