Add validation error messages with styling
This change displays validation errors if the user submits an invalid form.

--- a/CyberpunkVehicles/wwwroot/index.html
+++ b/CyberpunkVehicles/wwwroot/index.html
@@ -24,7 +24,9 @@
             <i class="fa-solid fa-circle-plus add-vehicle"></i>
         </div>
         <div class="create-new-vehicle is-hidden">
+            <div class="create-vehicle-errors">
 
+            </div>
             <div class="columns is-centered">
                 <div class="column is-four-fifths create-new-vehicle-content ">
                     <form class="create-vehicle-form" method="POST" enctype="multipart/form-data">
